--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <table cellspacing="50">
         <tr>
 
-            <td><img src="cv/images/profilePhoto.png" alt="Ronak's Profile Picture"
+            <td><img src="images/profilePhoto.png" alt="Ronak's Profile Picture"
                     width="200" height="200"></td>
             <td>
                 <h1>Ronak Patel</h1>
