--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <hr size="2" noshade>
 
-    <h3><a href="/WebDevByUdemy/Html-PersonalSite/photographySkills.html">Hobbies</a></h3>
+    <h3><a href="photographySkills.html">Hobbies</a></h3>
 
     <h3>Education</h3>
     <ul>
